--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   My online portfolio space 
   <br><br>
-  Please contact me with questions, criticisms or kudos via my email or LinkedIn 
+  Please feel free to contact me via my email or LinkedIn 
   <br><br>
   <a href="https://www.linkedin.com/in/william-s-91a21a119/">View My LinkedIn Profile</a> 
   
