--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: William M Seath
-logo: "/images/el dude brothers.JGP?raw=true" # your photo (or logo) here
+logo: "/images/el dude brothers.JGP" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   My online portfolio space 
   <br><br>
