--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 title: William M Seath
 logo: "/images/el_dude_brothers.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
+  Tester image
+  <br><br>
   My online portfolio space 
   <br><br>
   Please feel free to contact me via my email or LinkedIn 
