--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Please feel free to contact me via my email or LinkedIn 
   <br><br>
-  <a href="https://www.linkedin.com/in/william-s-91a21a119/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/william-m-seath//">Linkedin</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
