--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-logo: "/images/el_dude_brothers.png" # your photo (or logo) here
+logo: "/images/landing page/circle-cropped.png" # your photo (or logo) here
 title: William M Seath
 description: > # your text below (remove <br> elements if you don't need line breaks)
   My online portfolio space 
